Made it java 8 compatible